# django_two_scoop

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py
twoscoops/: apps.py  models.py
twoscoops/migrations/: 0001_initial.py
