[tool.poetry]
name = "two_scoops_django"
version = "0.1.0"
description = ""
authors = ["sahayana <saokhueyang@gmail.com:>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"